--- a/index.html
+++ b/index.html
@@ -480,7 +480,7 @@
 
   <div class="header">
     <h1>Yuvraj Singh Tomar</h1>
-    <p>Cybersecurity Expert & Web Developer</p>
+    <p>Cybersecurity Expert, Web Developer, MIS & Data Analyst, GIS Expert</p>
     <div class="total-certificates">Total Certificates: <span id="total-count">0</span></div>
   </div>
 
